# soroban-actions

./: .gitignore  LICENSE  README.md  action.yml
.github/workflows/: test.yml
dummy-contract/: Cargo.toml
dummy-contract/src/: lib.rs
